# oanda-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: smoke.py
src/oanda_mcp/: __init__.py  client.py  config.py  server.py
src/oanda_mcp/tools/: __init__.py  accounts.py  market.py  orders.py  positions.py  pricing.py  trades.py  transactions.py
tests/: conftest.py  test_accounts.py  test_client.py  test_config.py  test_market.py  test_orders.py  test_positions.py  test_pricing.py  test_server.py  test_trades.py  test_transactions.py
