[project]
name = "oanda-mcp"
version = "0.1.0"
description = "MCP server for the Oanda v20 REST API: accounts, market data, and gated trading tools."
authors = [{ name = "Florinel Chis" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14,<3",
    "httpx>=0.27",
]

[project.scripts]
oanda-mcp = "oanda_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.26",
    "respx>=0.22",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oanda_mcp"]
